--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ h6 {
     font-size: 2em;
   }
   h2 {
+    font-size: 2em;
     text-align: center;
   }
   h3 {
@@ -519,6 +520,7 @@ main {
   border-bottom-left-radius: 250px;
   background-color: #FFCC00;
   width: calc(50% + 165px);
+  min-width: 75%;
   padding: 4rem 10% 4rem 230px;
   position: relative;
   z-index: 5;
@@ -940,6 +942,17 @@ main {
     grid-template-rows: 3em 80px 3em 2em;
   }
 }
+@media (max-width: 575px) {
+  .sec-6 .box {
+    font-size: 10px;
+    grid-template-rows: 3em 60px 3em 2em;
+    padding: 1.5em;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+  }
+}
 .sec-6 .box h3 {
   grid-column: 1/3;
   grid-row: 1/2;
@@ -956,6 +969,11 @@ main {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+}
+@media (max-width: 575px) {
+  .sec-6 .box h3 {
+    font-size: 1.5em;
   }
 }
 .sec-6 .box img {
@@ -1227,6 +1245,11 @@ main {
     padding: 4em 0;
   }
 }
+@media (max-width: 575px) {
+  .sec-7 {
+    padding: 3em 0;
+  }
+}
 .sec-7 figure {
   border-top-left-radius: 60px;
   border-top-right-radius: 0px;
@@ -1265,6 +1288,11 @@ main {
     padding: 3em;
   }
 }
+@media (max-width: 575px) {
+  .sec-7 figure figcaption {
+    padding: 2em;
+  }
+}
 
 .sec-8 {
   border-top-left-radius: 60px;
@@ -1285,6 +1313,15 @@ main {
     padding: 3em;
   }
 }
+@media (max-width: 575px) {
+  .sec-8 {
+    border-top-left-radius: 2em;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    padding: 2em;
+  }
+}
 .sec-8 ul {
   padding-left: 0px;
   list-style: none;
@@ -1301,6 +1338,11 @@ main {
   font-size: 1.75em;
   font-weight: 600;
   flex: 1;
+  display: flex;
+  align-items: baseline;
+}
+.sec-8 ul li div span {
+  flex: 1;
 }
 @media (max-width: 1399px) {
   .sec-8 ul li div {
@@ -1315,14 +1357,14 @@ main {
 .sec-8 ul li div::before {
   content: "";
   display: inline-block;
-  width: 0.75rem;
-  height: 0.75rem;
+  width: 0.5em;
+  height: 0.5em;
   background-color: #FFCC00;
-  border-top-left-radius: 0.25rem;
+  border-top-left-radius: 0.15em;
   border-top-right-radius: 0px;
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-  margin-right: 1rem;
+  border-bottom-right-radius: 0.15em;
+  border-bottom-left-radius: 0.15em;
+  margin-right: 0.5em;
 }
 .sec-8 ul li strong {
   font-size: 1.75em;
@@ -1363,19 +1405,34 @@ main {
   position: relative;
   padding-left: 2.5em;
 }
+@media (max-width: 991px) {
+  .marked-list li {
+    padding-left: 2em;
+  }
+}
 .marked-list li::before {
   content: "";
   display: block;
   position: absolute;
   left: 0px;
   top: 0px;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-top-left-radius: 1rem;
+  width: 1.6em;
+  height: 1.6em;
+  border-top-left-radius: 0.6em;
   border-top-right-radius: 0px;
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 0.6em;
+  border-bottom-left-radius: 0.6em;
   background-color: #FFCC00;
+}
+@media (max-width: 991px) {
+  .marked-list li::before {
+    width: 1.2em;
+    height: 1.2em;
+    border-top-left-radius: 0.4em;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0.4em;
+    border-bottom-left-radius: 0.4em;
+  }
 }
 .marked-list li:not(:first-child) {
   margin-top: 1em;
@@ -1451,6 +1508,11 @@ main {
        object-position: center;
   }
 }
+@media (max-width: 575px) {
+  .sec-10 .pattern {
+    height: 100vw;
+  }
+}
 .sec-10 .man {
   position: absolute;
   bottom: 5%;
@@ -1482,6 +1544,11 @@ main {
 @media (max-width: 767px) {
   .sec-10 .man {
     height: 450px;
+  }
+}
+@media (max-width: 575px) {
+  .sec-10 .man {
+    height: 90vw;
   }
 }
 .sec-10 .container {
@@ -1517,6 +1584,11 @@ main {
     min-height: auto;
   }
 }
+@media (max-width: 575px) {
+  .sec-11 {
+    padding: 2em 0;
+  }
+}
 .sec-11 .pattern {
   position: absolute;
   top: 0%;
@@ -1538,6 +1610,15 @@ main {
   padding: 4em;
   color: #fff;
   position: relative;
+}
+@media (max-width: 575px) {
+  .sec-11 .container form {
+    border-top-left-radius: 2em;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+    padding: 2em;
+  }
 }
 .sec-11 .container form .img-item {
   position: absolute;
@@ -1570,6 +1651,7 @@ main {
 @media (max-width: 767px) {
   .accordion-button {
     padding: 1em 0px;
+    font-size: 1.5em;
   }
 }
 .accordion-button::after {
@@ -1581,14 +1663,19 @@ main {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  width: 160px;
-  height: 20px;
+  width: 15%;
+  height: 0.7em;
   background-color: transparent;
   border-top-left-radius: 4px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   transition: 0.25s ease-in;
+}
+@media (max-width: 767px) {
+  .accordion-button::before {
+    height: 0.25em;
+  }
 }
 .accordion-button:not(.collapsed) {
   background-color: transparent;
@@ -1606,6 +1693,11 @@ main {
 .accordion-collapse .accordion-body p {
   font-size: 1.3em;
   font-weight: 500;
+}
+@media (max-width: 767px) {
+  .accordion-collapse .accordion-body p {
+    font-size: 1.2em;
+  }
 }
 
 footer {
@@ -1667,27 +1759,6 @@ footer.mobile nav ul a:hover, footer.mobile nav ul a:focus, footer.mobile nav ul
 .offcanvas-body {
   padding: 2em 0;
 }
-.offcanvas .btn-close {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  width: 2.5em;
-  height: 2.5em;
-  border-radius: 50%;
-  background: #F6F6F6;
-  opacity: 1;
-  padding: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.25s ease-in;
-}
-.offcanvas .btn-close:hover {
-  background-color: #FFCC00;
-}
-.offcanvas .btn-close img {
-  width: 1em;
-}
 .offcanvas nav ul {
   list-style: none;
   padding-left: 0px;
@@ -1709,4 +1780,47 @@ footer.mobile nav ul a:hover, footer.mobile nav ul a:focus, footer.mobile nav ul
   width: 3rem;
   height: 3rem;
   margin-right: 1rem;
+}
+
+.btn-close {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  background: #F6F6F6;
+  opacity: 1;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.25s ease-in;
+}
+.btn-close:hover {
+  background-color: #FFCC00;
+}
+.btn-close img {
+  width: 1em;
+}
+
+.modal-content {
+  background-color: #FFCC00;
+  padding: 3em;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+}
+@media (max-width: 575px) {
+  .modal-content {
+    padding: 1.5em;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 2em;
+    border-bottom-left-radius: 2em;
+  }
+}
+.modal-body {
+  padding: 0px;
 }/*# sourceMappingURL=style.css.map */
